# FeatherPiFlix

./: AUTHORS  CMakeLists.txt  readme.md
assets/www/: spectre.min.css
firmware/: CMakeLists.txt
firmware/include/core/: catalog.h  cover.h  csv.h  img_format.h  media_manager.h  movie.h  search.h  sort.h  utils.h
firmware/src/core/: catalog.cpp  cover.cpp  csv.cpp  img_format.cpp  movie.cpp  search.cpp  sort.cpp  utils.cpp
firmware/tests/: test_catalog.cpp  test_csv.cpp  test_data.cpp  test_search.cpp  test_selection.cpp  test_sort.cpp
firmware/tests/core/: test_catalog.cpp  test_img_format.cpp  test_media_manager.cpp  test_search.cpp  test_selection.cpp  test_sort.cpp  test_utils.cpp
include/core/: cover.h  movie.h  search.h  sort.h
include/server/: http_server.h  router.h
src/core/: catalog.cpp  cover.cpp  img_format.cpp  media_manager.cpp  movie.cpp  utils.cpp
src/server/: http_server.cpp  router.cpp
tests/: utils.cpp  utils.h
tests/core/: test_catalog.cpp  test_data.cpp  test_img_format.cpp  test_media_manager.cpp  test_search.cpp  test_utils.cpp
tests/server/: test_http_server.cpp  test_router.cpp
